# Simple-GRD-Net

./: .coveragerc  .gitignore  README.md  aggregator_filename_descriptor.txt  main.py  mvtec  mvtec_ds_generator.sh  pyproject.toml  requirements.txt
.indev.github/workflows/: ci.yml
configs/backends/: pytorch.yaml  tensorflow_scaffold.yaml
configs/profiles/: deepindustrial_sn_2026.yaml  grdnet_2023_full.yaml
grdnet/: __init__.py  __main__.py  cli.py
grdnet/aggregator/: __init__.py  aggegator.py
grdnet/augment/: __init__.py  augment_pipe.py
grdnet/backends/: __init__.py  base.py  pytorch_backend.py  registry.py  tensorflow_backend.py
grdnet/config/: __init__.py  loader.py  schema.py
grdnet/core/: __init__.py  determinism.py  exceptions.py  logging.py  reproducibility.py  runtime.py
grdnet/data/: __init__.py  contracts.py  datamodule.py  load_data.py  patches.py
tests/: test_anomaly_metrics.py  test_backend_registry.py  test_checkpoint_io.py  test_cli.py  test_config_validation.py  test_core_utils.py  test_data_contracts.py  test_datamodule_contract.py  test_inference_aggregation.py  test_inference_scoring_strategy.py  test_loss_profile_parity.py  test_metrics_thresholding.py  test_mixed_precision_config.py  test_model_forwards.py  test_mvtec_adapter.py  test_patch_extraction.py  test_perturbation.py  test_pytorch_backend_steps.py  test_reporting.py  test_reproducibility.py  test_runner_observability.py  test_runner_paths.py  test_runtime_guard.py  test_scheduler_behavior.py  test_tensorflow_scaffold_and_entrypoint.py  test_train_batch_preview.py
(+43 files in other folders)
